<resources>
    <string name="app_name" translatable="false">OTrafyc</string>
    <string name="title_activity_map" translatable="true">Map</string>
    <string name="motto" translatable="true">Smooth   rides   with   fun</string>
    <string name="NightDayMode" translatable="true">Night / Day Mode</string>
    <string name="TrafficOnOff" translatable="true">Traffic On / Off</string>
    <string name="TrafficOn" translatable="true">Traffic Enabled</string>
    <string name="TrafficOff" translatable="true">Traffic Disabled</string>
    <string name="ShareLocation" translatable="true">Share Location</string>
    <string name="DayMode" translatable="true">Light</string>
    <string name="NightMode" translatable="true">Dark</string>
    <string name="YouSetDayMode" translatable="true">Light Mode</string>
    <string name="YouSetNightMode" translatable="true">Dark Mode</string>
    <string name="google_direction_api" translatable="false">AIzaSyBsqBmV1mQ_FP_YyKkGLHjcc7LkzlET7wk</string>
    <string name="interstitial_AdUnit" translatable="false">ca-app-pub-7732231090579598/2255020600</string>
    <string name="place_API" translatable="false">AIzaSyBEVeqt-U8d1XoWPg-fMeeHhfXliAn4d74</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="you_are_online" translatable="true">You\'re Online</string>
    <string name="you_are_offline" translatable="true">You\'re Offline</string>
    <string name="privacypolicyfirstpart" translatable="true">Onim Technologies built OTrafyc app as a free app. This service is provided by Onim Technologies at no cost and it is intended for use as is unless you request for certain paid features.\n\nThis page is used to inform users regarding our policies with the collection, use, and disclosure of non-personal Information if anyone decided to use our Service.\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms of Service, which is accessible at Onim Technologies unless otherwise defined in this Privacy Policy.\n\nWhen we say \"Onim\", \"our\", \"we\", or \"us\", we are talking about Onim Technologies. This Privacy Policy applies to all of our apps, services, features, software unless specified otherwise.</string>
    <string name="privacy_policy_2nd_part" translatable="true">For a better experience, while using our Service, we may require certain non-personal identifiable information such as your phone\'s IP address . The information that we retrieve will be retained by us and used as described in this privacy policy.\n\nThe app does leverage on third party services that may collect permission based device location data for advertising purposes.\nIn using our app, your location information will be shared with Google AdMob as well as advertising identifier for the purpose of displaying ads to you based while in the app.\n\nLinks to privacy policy of third party service providers used by the app:</string>
    <string name="privacy_policy" translatable="true">Privacy Policy</string>
    <string name="contact_us" translatable="true">Contact Us</string>
    <string name="information_collection_and_use" translatable="true">Information Collection and Use</string>
    <string name="log_data" translatable="false">Log Data</string>
    <string name="onim_wants_to_inform_you_our_user_that_whenever_you_use_our_service_in_case_of_an_error_in_the_app_we_collect_certain_system_data_and_information_through_third_party_products_on_your_device_called_log_data_this_log_data_may_include_information_such_as_your_device_internet_protocol_ip_address_device_name_operating_system_version_the_configuration_of_the_app_when_utilizing_our_service_the_time_and_date_of_your_use_of_the_service_and_other_statistics_we_collect_this_data_to_help_us_in_addressing_technical_issues_to_further_improve_our_services" translatable="true">Onim wants to inform you our user that whenever you use our Service, in case of an error in the app, we collect certain system data and information (through third party products) on your device called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics. We collect this data to help us in addressing technical issues to further improve our Services.</string>
    <string name="cookies">Cookies</string>
    <string name="cookies_are_files_with_a_small_amount_of_data_that_are_commonly_used_as_anonymous_unique_identifiers_these_are_sent_to_your_browser_from_the_websites_that_you_visit_and_are_stored_on_your_device_s_internal_memory_n_nthis_service_does_not_use_these_cookies_explicitly_however_the_app_may_use_third_party_code_and_libraries_that_use_cookies_to_collect_information_and_improve_their_services_you_have_the_option_to_either_accept_or_refuse_these_cookies_and_know_when_a_cookie_is_being_sent_to_your_device_if_you_choose_to_refuse_our_cookies_you_may_not_be_able_to_use_some_portions_of_this_service" translatable="true">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="service_providers">Service Providers</string>
    <string name="we_may_employ_third_party_companies_and_individuals_due_to_the_following_reasons_n_nto_facilitate_our_service_nto_provide_services_on_our_behalf_nto_perform_service_related_services_nto_assist_us_in_analyzing_how_our_service_is_used_n_nwe_want_to_inform_users_of_this_service_that_these_third_parties_have_access_to_your_personal_information_the_reason_is_to_perform_the_tasks_assigned_to_them_on_our_behalf_however_they_are_obligated_not_to_disclose_or_use_the_information_for_any_other_purpose" translatable="true">We may employ third-party companies and individuals due to the following reasons: \n\nTo facilitate our Service \nTo provide Services on our behalf \nTo perform Service-related services \nTo assist us in analyzing how our Service is used \n\nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="security">Security</string>
    <string name="we_value_your_trust_in_providing_us_your_information_thus_we_are_striving_to_use_commercially_acceptable_means_of_protecting_it_but_remember_that_no_method_of_transmission_over_the_internet_or_method_of_electronic_storage_is_100_secure_and_reliable_and_we_cannot_guarantee_its_absolute_security" translatable="true">We value your trust in providing us your Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="links_to_other_sites">Links to Other Sites</string>
    <string name="this_service_may_contain_links_to_other_sites_if_you_click_on_a_third_party_link_you_will_be_directed_to_that_site_note_that_these_external_sites_are_not_operated_by_us_therefore_we_strongly_advise_you_to_review_the_privacy_policy_of_these_websites_we_have_no_control_over_and_assume_no_responsibility_for_the_content_privacy_policies_or_practices_of_any_third_party_sites_or_services" translatable="true">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="children_s_privacy">Children’s Privacy</string>
    <string name="the_services_comply_with_the_children_s_online_privacy_protection_act_onim_does_not_knowingly_collect_personal_information_from_children_under_the_age_of_13_through_the_services_in_the_event_that_a_user_identifies_himself_or_herself_as_a_child_under_the_age_of_13_in_connection_with_any_of_our_services_we_will_not_collect_store_or_use_any_personal_information_of_such_user_in_addition_if_onim_receives_personal_information_provided_by_a_child_under_the_age_of_13_the_information_will_promptly_be_deleted_in_a_secure_manner_further_if_any_user_being_a_parent_or_guardian_realizes_that_his_or_her_child_under_the_age_of_13_has_provided_us_with_his_or_her_personal_information_such_user_should_please_contact_us_so_that_we_will_be_able_to_take_the_necessary_action" translatable="true">The Services comply with the Children\'s Online Privacy Protection Act. Onim does not knowingly collect personal information from children under the age of 13 through the Services. In the event that a user identifies himself or herself as a child under the age of 13 in connection with any of our Services, we will not collect, store or use any personal information of such user. In addition, if Onim receives personal information provided by a child under the age of 13, the information will promptly be deleted in a secure manner. Further, if any user, being a parent or guardian realizes that his or her child under the age of 13 has provided us with his or her personal information, such user should please contact us so that we will be able to take the necessary action.</string>
    <string name="changes_to_this_privacy_policy">Changes to This Privacy Policy</string>
    <string name="onim_may_update_this_privacy_policy_from_time_to_time_and_at_onim_s_sole_discretion_thus_you_are_advised_to_review_this_page_periodically_for_any_changes_we_may_notify_you_of_any_changes_by_posting_the_new_privacy_policy_on_this_page" translatable="true">Onim may update this Privacy Policy from time to time and at Onim\'s sole discretion. Thus, you are advised to review this page periodically for any changes. We may notify you of any changes by posting the new Privacy Policy on this page</string>
    <string name="have_questions_or_legal_concerns_about_our_privacy_policy" translatable="true">Have questions or legal concerns about our privacy policy?</string>
    <string name="todo">TODO</string>
    <string name="onim_nprivacy_policy" translatable="true">Onim \nPrivacy Policy</string>
    <string name="last_updated_january_2021" translatable="true">Last Updated:January, 2021</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="terms_of_service" translatable="true">Terms of Service</string>
    <string name="exit" translatable="true">Exit</string>
    <string name="how_to_use" translatable="true">How to Use</string>
    <string name="trafyc" translatable="false">Trafyc</string>
    <string name="map">Map</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="rate_otrafyc">Rate OTrafyc</string>
</resources>