<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >



    <group android:checkableBehavior="none">  <!-- android:checkableBehavior="single" -->



        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
       <!-- <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />
-->

    </group>


    <item android:title="">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_ContactUs"
                    android:icon="@drawable/ic_contact_us"
                    android:title= "@string/contact_us"
                    />

                <item
                    android:id="@+id/nav_HowToUse"
                    android:icon="@drawable/ic_help"
                    android:title= "@string/how_to_use"/>

                <item
                    android:id="@+id/nav_Settings"
                    android:icon="@drawable/ic_settings"
                    android:title= "@string/settings"

                    />

            </group>



        </menu>

    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_inviteFriends"
                    android:icon="@drawable/ic_invite_friends"
                    android:title="@string/invite_a_friend" />

                <item
                    android:id="@+id/nav_rateUs"
                    android:icon="@drawable/ic_rate_us"
                    android:title="@string/rate_otrafyc" />

            </group>



        </menu>

    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_privacy_policy"
                    android:title="@string/privacy_policy" />

                <item
                    android:id="@+id/nav_terms"
                    android:icon="@drawable/ic_terms"
                    android:title="@string/terms_of_service" />

            </group>



        </menu>

    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_logout"
                android:title="@string/exit" />


        </menu>

    </item>


</menu>