<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/changeableWhite"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_mem_blue_white_stroke"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

       <!-- <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_mem_black_stroke_circle"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:contentDescription="TODO" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trafyc"
            android:fontFamily="@font/typographica_regular"
            android:layout_marginStart="1dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/UnchangeableBlue1"
            android:alpha="0.9"
            app:drawableStartCompat="@drawable/ic_mem_black_stroke_circle" />

    </LinearLayout>


   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/otrafyc"
        android:textColor="@color/americanOrange"
        android:textStyle="bold"
        android:textSize="20sp"/>
-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/motto"
        android:textColor="@color/changeableSmokyBlack"
        android:textStyle="bold"
        android:textSize="14sp"
        android:alpha="0.7"/>


</LinearLayout>